--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,3 +8,16 @@ layout: default
 {% endif %}
 <p id="tip-info">{{ page.date | date:"%B %e, %Y @ %I:%M %p" }}</p>
 {{ content }}
+<div class="pagination">
+  {% if paginator.previous_page %}
+  <a href="/page{{ paginator.previous_page }}" class="previous">Previous</a>
+  {% else %}
+  <span class="previous">Previous</span>
+  {% endif %}
+  <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+  {% if paginator.next_page %}
+  <a href="/page{{ paginator.next_page }}" class="next">Next</a>
+  {% else %}
+  <span class="next ">Next</span>
+  {% endif %}
+</div>
