--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,9 +11,9 @@ layout: default
 
 <div id="post-nav" class="clearfix">
   {% if page.previous %}
-  <a rel="prev" href="{{ page.previous.url }}">&larr; Older</a>
+  <a rel="prev" href="{{ page.previous.url }}">&larr;{{ page.previous.title }}</a>
   {% endif %}
   {% if page.next %}
-  <a rel="next" href="{{ page.next.url }}">Newer &rarr;</a>
+  <a rel="next" href="{{ page.next.url }}" style="float:right;">{{ page.next.title }}&rarr;</a>
   {% endif %}
 </div>
