--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,16 +7,12 @@
         {% else %}
         <title>Perl 程序员应该知道的事: {{ page.title }}</title>
         {% endif %}
-        <link rel="shortcut icon" href="{{ site.baseurl }}favicon.ico">
-        <!-- syntax highlighting css -->
+        <link rel="stylesheet" href="//ty.yukir.net/ty.css">
         <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/syntax.css">
-        <!-- homepage css -->
-        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/hgtip/aal.css">
-        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/hgtip/calluna.css">
         <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/hgtip/style.css">
     </head>
     <body>
-        <div id="main-wrap">
+        <div id="main-wrap" class="ty ty-wide">
             <div id="header">
                 <h1><a href="{{ site.baseurl }}" title="Perl 程序员应该知道的事">Perl 程序员应该知道的事</a></h1>
             </div>
