--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
         {% else %}
         <title>Perl 程序员应该知道的事: {{ page.title }}</title>
         {% endif %}
-        <link rel="stylesheet" href="//ty.yukir.net/ty.css">
-        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/syntax.css">
-        <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/hgtip/style.css">
+        <link rel="stylesheet" href="//yuki.rocks/ty.css/ty.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}css/syntax.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}css/hgtip/style.css">
     </head>
     <body>
         <div id="main-wrap" class="ty ty-wide">
